removed integration tests. Too many exchanges now and too much effort to maintain valid credentials at all.